[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://MagicalFlyingObjectInherited.gd" type="Script" id=2]
[ext_resource path="res://ShadersMaterials/MagicalMaterial.tres" type="Material" id=3]
[ext_resource path="res://Assets/sprBottleSoda_0.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 7.75 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/activate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "float_updown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 7 ), Vector2( 9, 17 ), Vector2( 9, 14 ), Vector2( 9, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/activate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="MagicalFlyingObjectInherited" instance=ExtResource( 1 )]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" parent="." index="1"]
material = ExtResource( 3 )
position = Vector2( 9, 7 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="2"]
disabled = true

[node name="Area2D" parent="." index="4"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" parent="Area2D" index="0"]
position = Vector2( 6, 7 )
shape = SubResource( 4 )

[node name="KinematicCollision" type="CollisionShape2D" parent="." index="5"]
position = Vector2( 6, 6 )
shape = SubResource( 1 )
disabled = true

[node name="FloatingEffect" type="Tween" parent="." index="6"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
anims/RESET = SubResource( 2 )
anims/float_updown = SubResource( 3 )

[connection signal="tween_completed" from="FloatingEffect" to="." method="_on_FloatingEffect_tween_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
